Move video styling to scss and adjust margins

--- a/Sparc.Blossom.Server/Pages/Index.razor
+++ b/Sparc.Blossom.Server/Pages/Index.razor
@@ -4,190 +4,186 @@
 
 <div class="home">
     <section class="home--hero">
-        <div class="container">
-            <div class="hero-image">
-                <div style="padding:56.25% 0 0 0;position:relative;">
-                    <iframe src="https://player.vimeo.com/video/775904126?h=0e3ec42e1f&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&amp;background=1" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Pattern_3 Color-change 4K.mp4"></iframe>
-                </div>
-            </div>
-            <div class="header">
-                <h1>From one codebase springs many platforms.</h1>
-                <p class="subtitle-2">
-                    Sparc offers a way to architect apps so that you can focus on painting the unique and beautiful art your app is meant to convey.
-                </p>
-            </div>
+        <div class="hero-image">
+            <iframe src="https://player.vimeo.com/video/775904126?h=0e3ec42e1f&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&amp;background=1" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="Blossom: From one codebase springs many platforms"></iframe>
+        </div>
+        <div class="header">
+            <h1>From one codebase springs many platforms.</h1>
+            <p class="subtitle-2">
+                Sparc offers a way to architect apps so that you can focus on painting the unique and beautiful art your app is meant to convey.
+            </p>
         </div>
     </section>
     @*<div class="float-wrapper" id="float-wrapper">
-        <div class="float-spacer"></div>*@
-        <section class="home--intro">
-            <div class="container">
-                <div class="header">
-                    <h3>Blossom breaks many paradigms</h3>
-                    <p class="subtitle-1">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</p>
-                </div>
-                <div class="interactive-block">
-                    <img src="images/Placeholder_minigame.png" />
-                </div>
+    <div class="float-spacer"></div>*@
+    <section class="home--intro">
+        <div class="container">
+            <div class="header">
+                <h3>Blossom breaks many paradigms</h3>
+                <p class="subtitle-1">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</p>
             </div>
-        </section>
-        <div class="projectlogo-carousel">
-            <div class="container">
-                <div class="logo-wrapper">
-                    <img class="project-logo" src="images/projects/logos/Citeblue_Hori.png" />
-                </div>
-                <div class="logo-wrapper">
-                    <img class="project-logo" src="images/projects/logos/Conseris_Hori.png" />
-                </div>
-                <div class="logo-wrapper">
-                    <img class="project-logo" src="images/projects/logos/Ibis_Hori.png" />
-                </div>
-                <div class="logo-wrapper">
-                    <img class="project-logo" src="images/projects/logos/Kodekit_Hori.png" />
-                </div>
-                <div class="logo-wrapper">
-                    <img class="project-logo" src="images/projects/logos/Kuvio_Hori.png" />
-                </div>
-                <div class="logo-wrapper">
-                    <img class="project-logo" src="images/projects/logos/Law of 100_Hori.png" />
-                </div>
-                <div class="logo-wrapper">
-                    <img class="project-logo" src="images/projects/logos/Sparc_Hori.png" />
-                </div>
-
-                @*Repeat Slides*@
-                <div class="logo-wrapper">
-                    <img class="project-logo" src="images/projects/logos/Citeblue_Hori.png" />
-                </div>
-                <div class="logo-wrapper">
-                    <img class="project-logo" src="images/projects/logos/Conseris_Hori.png" />
-                </div>
-                <div class="logo-wrapper">
-                    <img class="project-logo" src="images/projects/logos/Ibis_Hori.png" />
-                </div>
-                <div class="logo-wrapper">
-                    <img class="project-logo" src="images/projects/logos/Kodekit_Hori.png" />
-                </div>
-                <div class="logo-wrapper">
-                    <img class="project-logo" src="images/projects/logos/Kuvio_Hori.png" />
-                </div>
-                <div class="logo-wrapper">
-                    <img class="project-logo" src="images/projects/logos/Law of 100_Hori.png" />
-                </div>
-                <div class="logo-wrapper">
-                    <img class="project-logo" src="images/projects/logos/Sparc_Hori.png" />
-                </div>
+            <div class="interactive-block">
+                <img src="images/Placeholder_minigame.png" />
             </div>
         </div>
-        <section class="home--about">
-            <div class="container">
-                <div class="feature">
-                    <div class="image-wrapper">
-                        <img class="feature-image" src="/images/Frontend.png" />
-                    </div>
-                    <div class="content-wrapper">
-                        <h4>Frontend</h4>
-                        <p class="subtitle-1">
-                            Erat pellentesque adipiscing commodo elit. Facilisi nullam vehicula ipsum a. Sed nisi lacus sed viverra tellus in. 
-                            Eget gravida cum sociis natoque penatibus. Imperdiet massa tincidunt nunc pulvinar sapien et ligula
-                        </p>
-                    </div>
+    </section>
+    <div class="projectlogo-carousel">
+        <div class="container">
+            <div class="logo-wrapper">
+                <img class="project-logo" src="images/projects/logos/Citeblue_Hori.png" />
+            </div>
+            <div class="logo-wrapper">
+                <img class="project-logo" src="images/projects/logos/Conseris_Hori.png" />
+            </div>
+            <div class="logo-wrapper">
+                <img class="project-logo" src="images/projects/logos/Ibis_Hori.png" />
+            </div>
+            <div class="logo-wrapper">
+                <img class="project-logo" src="images/projects/logos/Kodekit_Hori.png" />
+            </div>
+            <div class="logo-wrapper">
+                <img class="project-logo" src="images/projects/logos/Kuvio_Hori.png" />
+            </div>
+            <div class="logo-wrapper">
+                <img class="project-logo" src="images/projects/logos/Law of 100_Hori.png" />
+            </div>
+            <div class="logo-wrapper">
+                <img class="project-logo" src="images/projects/logos/Sparc_Hori.png" />
+            </div>
+
+            @*Repeat Slides*@
+            <div class="logo-wrapper">
+                <img class="project-logo" src="images/projects/logos/Citeblue_Hori.png" />
+            </div>
+            <div class="logo-wrapper">
+                <img class="project-logo" src="images/projects/logos/Conseris_Hori.png" />
+            </div>
+            <div class="logo-wrapper">
+                <img class="project-logo" src="images/projects/logos/Ibis_Hori.png" />
+            </div>
+            <div class="logo-wrapper">
+                <img class="project-logo" src="images/projects/logos/Kodekit_Hori.png" />
+            </div>
+            <div class="logo-wrapper">
+                <img class="project-logo" src="images/projects/logos/Kuvio_Hori.png" />
+            </div>
+            <div class="logo-wrapper">
+                <img class="project-logo" src="images/projects/logos/Law of 100_Hori.png" />
+            </div>
+            <div class="logo-wrapper">
+                <img class="project-logo" src="images/projects/logos/Sparc_Hori.png" />
+            </div>
+        </div>
+    </div>
+    <section class="home--about">
+        <div class="container">
+            <div class="feature">
+                <div class="image-wrapper">
+                    <img class="feature-image" src="/images/Frontend.png" />
                 </div>
-                <div class="feature reverse">
-                    <div class="image-wrapper">
-                        <img class="feature-image" src="/images/Backend.png" />
-                    </div>
-                    <div class="content-wrapper">
-                        <h4>Backend</h4>
-                        <p class="subtitle-1">
-                            Non enim praesent elementum facilisis leo vel fringilla est ullamcorper.
-                            Erat pellentesque adipiscing commodo elit. Facilisi nullam vehicula ipsum a.
-                        </p>
-                    </div>
-                </div>
-                <div class="feature">
-                    <div class="image-wrapper">
-                        <img class="feature-image" src="/images/Database.png" />
-                    </div>
-                    <div class="content-wrapper">
-                        <h4>Database</h4>
-                        <p class="subtitle-1">
-                            Phasellus egestas tellus rutrum tellus pellentesque. Imperdiet massa tincidunt nunc pulvinar.
-                        </p>
-                        <p class="subtitle-1">
-                            Imperdiet massa tincidunt nunc pulvinar sapien et ligula. Feugiat sed lectus vestibulum mattis ullamcorper....
-                        </p>
-                    </div>
-                </div>
-                <div class="feature reverse">
-                    <div class="image-wrapper">
-                        <img class="feature-image" src="/images/Authentication.png" />
-                    </div>
-                    <div class="content-wrapper">
-                        <h4>Authentication</h4>
-                        <p class="subtitle-1">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                        </p>
-                    </div>
-                </div>
-                <div class="button-wrapper">
-                    <a href="https://github.com/sparc-coop/blossom" target="_blank" class="learn-more">
-                        Learn More
-                    </a>
+                <div class="content-wrapper">
+                    <h4>Frontend</h4>
+                    <p class="subtitle-1">
+                        Erat pellentesque adipiscing commodo elit. Facilisi nullam vehicula ipsum a. Sed nisi lacus sed viverra tellus in.
+                        Eget gravida cum sociis natoque penatibus. Imperdiet massa tincidunt nunc pulvinar sapien et ligula
+                    </p>
                 </div>
             </div>
-        </section>
-        <section class="home--projects">
-            <div class="container">
-                <div class="header">
-                    <h3>Explore our work</h3>
-                    <p class="subtitle-1">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet</p>
+            <div class="feature reverse">
+                <div class="image-wrapper">
+                    <img class="feature-image" src="/images/Backend.png" />
                 </div>
-                <div class="project-carousel">
-                    <div class="project-container">
-                        <ProjectCard Name="Citeblue" ProjectUrl="https://www.citeblue.com/" GithubUrl="https://github.com/sparc-coop/citeblue"/>
-                        <ProjectCard Name="Sparc" ProjectUrl="https://www.sparc.coop/" GithubUrl="https://github.com/sparc-coop/sparc" />
-                        <ProjectCard Name="Conseris" ProjectUrl="https://conseris.io/" GithubUrl="https://github.com/sparc-coop/conseris"/>
-                        <ProjectCard Name="Law of 100" ProjectUrl="https://lawof100.co/" GithubUrl="https://github.com/sparc-coop/law-of-100" />
-                        <ProjectCard Name="Kodekit" ProjectUrl="https://app.kodekit.io/" GithubUrl="https://github.com/sparc-coop/kodekit" />
-                        <ProjectCard Name="Ibis" ProjectUrl="https://github.com/sparc-coop/ibis" GithubUrl="https://github.com/sparc-coop/ibis" />
-            
-                        @*Repeat Slides*@
-                        <ProjectCard Name="Citeblue" ProjectUrl="https://www.citeblue.com/" GithubUrl="https://github.com/sparc-coop/citeblue" />
-                        <ProjectCard Name="Sparc" ProjectUrl="https://www.sparc.coop/" GithubUrl="https://github.com/sparc-coop/sparc" />
-                        <ProjectCard Name="Conseris" ProjectUrl="https://conseris.io/" GithubUrl="https://github.com/sparc-coop/conseris" />
-                        <ProjectCard Name="Law of 100" ProjectUrl="https://lawof100.co/" GithubUrl="https://github.com/sparc-coop/law-of-100" />
-                        <ProjectCard Name="Kodekit" ProjectUrl="https://app.kodekit.io/" GithubUrl="https://github.com/sparc-coop/kodekit" />
-                        <ProjectCard Name="Ibis" ProjectUrl="https://github.com/sparc-coop/ibis" GithubUrl="https://github.com/sparc-coop/ibis" />
-                    </div>
-                    @*
-                    <div class="arrows-container carousel-backward">
-                        <img src="/images/Double Arrow.png" />
-                    </div>
-                    <div class="arrows-container carousel-forward">
-                        <img src="/images/Double Arrow.png" />
-                    </div>
-                    *@
+                <div class="content-wrapper">
+                    <h4>Backend</h4>
+                    <p class="subtitle-1">
+                        Non enim praesent elementum facilisis leo vel fringilla est ullamcorper.
+                        Erat pellentesque adipiscing commodo elit. Facilisi nullam vehicula ipsum a.
+                    </p>
                 </div>
             </div>
-        </section>
-        <section class="home--cta">
-            <div class="container">
-                <div class="cta-image">
-                    <img src="images/Vector.png" />
+            <div class="feature">
+                <div class="image-wrapper">
+                    <img class="feature-image" src="/images/Database.png" />
                 </div>
-                <div class="header right">
-                    <h3>Come and join us for the greatest marathon in the world</h3>
-                    <a href="https://www.sparc.coop/" target="_blank" class="visit-sparc">Visit Sparc</a>
+                <div class="content-wrapper">
+                    <h4>Database</h4>
+                    <p class="subtitle-1">
+                        Phasellus egestas tellus rutrum tellus pellentesque. Imperdiet massa tincidunt nunc pulvinar.
+                    </p>
+                    <p class="subtitle-1">
+                        Imperdiet massa tincidunt nunc pulvinar sapien et ligula. Feugiat sed lectus vestibulum mattis ullamcorper....
+                    </p>
                 </div>
-                @*<div class="cta-input">
-                    <input type="text" placeholder="you@email.com" />
-                    <button class="sign-up"><img src="images/Arrow Forward.png" /></button>
-                </div>*@
             </div>
-        </section>
-        <Footer />
+            <div class="feature reverse">
+                <div class="image-wrapper">
+                    <img class="feature-image" src="/images/Authentication.png" />
+                </div>
+                <div class="content-wrapper">
+                    <h4>Authentication</h4>
+                    <p class="subtitle-1">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    </p>
+                </div>
+            </div>
+            <div class="button-wrapper">
+                <a href="https://github.com/sparc-coop/blossom" target="_blank" class="learn-more">
+                    Learn More
+                </a>
+            </div>
+        </div>
+    </section>
+    <section class="home--projects">
+        <div class="container">
+            <div class="header">
+                <h3>Explore our work</h3>
+                <p class="subtitle-1">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet</p>
+            </div>
+            <div class="project-carousel">
+                <div class="project-container">
+                    <ProjectCard Name="Citeblue" ProjectUrl="https://www.citeblue.com/" GithubUrl="https://github.com/sparc-coop/citeblue" />
+                    <ProjectCard Name="Sparc" ProjectUrl="https://www.sparc.coop/" GithubUrl="https://github.com/sparc-coop/sparc" />
+                    <ProjectCard Name="Conseris" ProjectUrl="https://conseris.io/" GithubUrl="https://github.com/sparc-coop/conseris" />
+                    <ProjectCard Name="Law of 100" ProjectUrl="https://lawof100.co/" GithubUrl="https://github.com/sparc-coop/law-of-100" />
+                    <ProjectCard Name="Kodekit" ProjectUrl="https://app.kodekit.io/" GithubUrl="https://github.com/sparc-coop/kodekit" />
+                    <ProjectCard Name="Ibis" ProjectUrl="https://github.com/sparc-coop/ibis" GithubUrl="https://github.com/sparc-coop/ibis" />
+
+                    @*Repeat Slides*@
+                    <ProjectCard Name="Citeblue" ProjectUrl="https://www.citeblue.com/" GithubUrl="https://github.com/sparc-coop/citeblue" />
+                    <ProjectCard Name="Sparc" ProjectUrl="https://www.sparc.coop/" GithubUrl="https://github.com/sparc-coop/sparc" />
+                    <ProjectCard Name="Conseris" ProjectUrl="https://conseris.io/" GithubUrl="https://github.com/sparc-coop/conseris" />
+                    <ProjectCard Name="Law of 100" ProjectUrl="https://lawof100.co/" GithubUrl="https://github.com/sparc-coop/law-of-100" />
+                    <ProjectCard Name="Kodekit" ProjectUrl="https://app.kodekit.io/" GithubUrl="https://github.com/sparc-coop/kodekit" />
+                    <ProjectCard Name="Ibis" ProjectUrl="https://github.com/sparc-coop/ibis" GithubUrl="https://github.com/sparc-coop/ibis" />
+                </div>
+                @*
+                <div class="arrows-container carousel-backward">
+                <img src="/images/Double Arrow.png" />
+                </div>
+                <div class="arrows-container carousel-forward">
+                <img src="/images/Double Arrow.png" />
+                </div>
+                *@
+            </div>
+        </div>
+    </section>
+    <section class="home--cta">
+        <div class="container">
+            <div class="cta-image">
+                <img src="images/Vector.png" />
+            </div>
+            <div class="header right">
+                <h3>Come and join us for the greatest marathon in the world</h3>
+                <a href="https://www.sparc.coop/" target="_blank" class="visit-sparc">Visit Sparc</a>
+            </div>
+            @*<div class="cta-input">
+            <input type="text" placeholder="you@email.com" />
+            <button class="sign-up"><img src="images/Arrow Forward.png" /></button>
+            </div>*@
+        </div>
+    </section>
+    <Footer />
     @*</div>*@
 </div>
 
