--- a/Sparc.Blossom.Server/Pages/Index.scss
+++ b/Sparc.Blossom.Server/Pages/Index.scss
@@ -31,10 +31,16 @@
         }
 
         .hero-image {
-            margin-bottom: -150px;
+            padding: 56.25% 0 0 0;
+            position: relative;
+            margin-bottom: -20%;
 
-            video {
+            iframe {
+                position: absolute;
+                top: 0;
+                left: 0;
                 width: 100%;
+                height: 100%;
             }
         }
         /*.hero-image {
@@ -1113,7 +1119,7 @@
 
             .header {
                 width: 100%;
-                
+
                 h1 {
                     font-size: 45px;
                 }
