Additional index cleanups

--- a/Sparc.Blossom.Server/Pages/Index.scss
+++ b/Sparc.Blossom.Server/Pages/Index.scss
@@ -14,6 +14,7 @@
 
     section.home--hero {
         padding-top: 50px;
+        padding-bottom: 0;
     }
 
     &--hero {
@@ -90,6 +91,7 @@
     }
 
     section.home--intro {
+        padding-top: 0;
         padding-bottom: 73px;
     }
 
