New video, fixed outline, fixed body background

--- a/Sparc.Blossom.Server/Pages/Guide.scss
+++ b/Sparc.Blossom.Server/Pages/Guide.scss
@@ -118,7 +118,7 @@
 
         .slide-number {
             color: $grey-200;
-            background: $black;
+            background: $background;
             padding: 7px 15px;
             border-radius: 36px;
             position: absolute;
