--- a/Sparc.Blossom.Server/Pages/Index.razor
+++ b/Sparc.Blossom.Server/Pages/Index.razor
@@ -5,13 +5,15 @@
 <div class="home">
     <section class="home--hero">
         <div class="hero-image">
-            <iframe src="https://player.vimeo.com/video/775904126?h=0e3ec42e1f&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&amp;background=1" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="Blossom: From one codebase springs many platforms"></iframe>
+            <iframe src="https://player.vimeo.com/video/776275105?h=f06885f256&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&amp;background=1" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="Blossom: From one codebase springs many platforms"></iframe>
         </div>
-        <div class="header">
-            <h1>From one codebase springs many platforms.</h1>
-            <p class="subtitle-2">
-                Sparc offers a way to architect apps so that you can focus on painting the unique and beautiful art your app is meant to convey.
-            </p>
+        <div class="container">
+            <div class="header">
+                <h1>From one codebase springs many platforms.</h1>
+                <p class="subtitle-2">
+                    Sparc offers a way to architect apps so that you can focus on painting the unique and beautiful art your app is meant to convey.
+                </p>
+            </div>
         </div>
     </section>
 
