--- a/Sparc.Blossom.Server/Shared/NavMenu.razor
+++ b/Sparc.Blossom.Server/Shared/NavMenu.razor
@@ -10,7 +10,7 @@
             <a href="/Contact">Contact</a>*@
         </div>
         <div class="join">          
-            <a href="https://github.com/sparc-coop/blossom" target="_blank" class="explore-blossom">
+            <a href="https://github.com/sparc-coop/blossom" target="_blank" class="explore-blossom" tabindex="1">
                 Explore Blossom
             </a>
         </div>
