--- a/Sparc.Blossom.Server/Pages/Index.razor
+++ b/Sparc.Blossom.Server/Pages/Index.razor
@@ -1,6 +1,6 @@
 ﻿@page "/"
 
-<PageTitle>Sparc Blossom</PageTitle>
+<PageTitle>Blossom by Sparc</PageTitle>
 
 <div class="home">
     <section class="home--video">
