--- a/Sparc.Blossom.Server/Pages/Index.scss
+++ b/Sparc.Blossom.Server/Pages/Index.scss
@@ -77,6 +77,10 @@
     section.home--intro {
         padding-top: 0;
         padding-bottom: 73px;
+
+        @media screen and (max-width: 457px) {
+            padding-bottom: 0;
+        }
     }
 
     &--intro {
@@ -1135,7 +1139,7 @@
                 border-radius: 25px;
 
                 img {
-                    max-width: 200px;
+                    //max-width: 200px;
                 }
             }
 
@@ -1269,6 +1273,7 @@
             padding: 60px 0;
 
             .container {
+                box-sizing: border-box;
                 padding: 0 20px;
                 flex-direction: column;
                 justify-content: space-between;
